# nstar-bit

./: .gitignore  ARCHIVE_CANONICAL_STACK.md  Building Epistemic API.md  CANONICAL_CORE.md  CHECKLIST.md  COMMIT_TASK.md  CONTRIBUTING.md  CRITIQUE_NSTAR_BIT.md  Cargo.toml  DIVERGENCE.md  Declarative Architecture Refinement.md  Epoch 21 Bootstrap and Gate.md  FINDINGS.md  GITHUB_ISSUES.md  GROUNDING_AUDIT_DELTA.md  IF_THE_LM_WRITES_BETTER_RULES.md  INTENT_REPO_ASSIMILATION.md  INTERPRETATION.md  MEMORATUM_CORPUS_AGENT.md  MILESTONES.md  PARALLEL_SESSIONS.md  PROJECT_MANAGEMENT_SPEC_CANONICAL_SYSTEM.md  PROTOCOL.md  PURGE_HARDCODED.md  README.md  README_CORPUS_SYNOPSIS.md  REPORT_ARCHITECTURE_EVIDENCE_AND_THREAD_V3.md  RUNNING_STATES.md  Refining Graph Epistemics.md  SOURCE_OF_TRUTH.md  STATUS.md  TAXONOMY.yaml  TAXONOMY_AUDIT_TASK.md  THEORY.md  Troubleshooting Shell Command Error.md  auto_receipts.jsonl  cursor_casual_greeting.md  epoch1_summary.tsv  epoch1_tasks.txt  epoch2_summary.tsv  (+21 more)
epoch_logs/: epoch10_summary.tsv  epoch10_tasks.txt  epoch11_summary.tsv  epoch11_tasks.txt  epoch12_summary.tsv  epoch12_tasks.txt  epoch13_summary.tsv  epoch13_tasks.txt  epoch14_summary.tsv  epoch14_tasks.txt  epoch15_summary.tsv  epoch15_tasks.txt  epoch16_summary.tsv  epoch16_tasks.txt  epoch17_summary.tsv  epoch17_tasks.txt  epoch18_summary.tsv  epoch18_tasks.txt  epoch19_summary.tsv  epoch19_tasks.txt  epoch1_summary.tsv  epoch1_tasks.txt  epoch20_summary.tsv  epoch20_tasks.txt  epoch21_summary.tsv  epoch21_tasks.txt  (+121 more)
sdk/python/: README.md  pyproject.toml
sdk/python/nstar_bit/: __init__.py  client.py  monitor.py  types.py
(+110 files in other folders)
