[package]
name = "nstar-bit"
version = "0.1.0"
edition = "2021"
description = "The causal collapse of things — dynamic metacognitive predicates for LLM turns"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
futures = "0.3.31"

