[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nstar-bit"
version = "0.1.0"
description = "Python SDK for the N★ Bit Epistemic API"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "anyio"]

[tool.hatch.build.targets.wheel]
packages = ["nstar_bit"]
